// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHighlight behavior loose matching matches strings with different casing 1`] = `
<span>
  different 
  <strong>
    case
  </strong>
   match
</span>
`;

exports[`EuiHighlight behavior matching only applies to first match 1`] = `
<span>
  <strong>
    match
  </strong>
   match match
</span>
`;

exports[`EuiHighlight behavior strict matching doesn't match strings with different casing 1`] = `
<span>
  different case match
</span>
`;

exports[`EuiHighlight is rendered 1`] = `
<span
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  value
</span>
`;
